API Server: Added update metadata apis.
